--- a/portfolio.html
+++ b/portfolio.html
@@ -44,16 +44,14 @@
 <div class="col-12 col-md-12 col-lg-12 col-xl-123 pt-4">
     <div class="col-12">
       <div class="row">
-        <div class="col-2 logo"><h4>Now<span class="r">r</span><span class="r">in</span></div>
+        
         <div class="col-10">
   
   <nav>
   <ul class="menu d-flex justify-content-end">
   <a href=""><li>Portfolio</li></a>
   
-  <li>Blog</li>
-   <li><a href="https://nowrinislamlk.github.io/shoes"><button type="button" class="btn btn-primary">Hire Me</button></li></a>
-   
+
   </ul>
   </nav>
   </div>
@@ -63,11 +61,11 @@
   <div class="row ml-6  ">
     <div class="col-12 col-md-12 col-lg-6 col-xl-6 mt-3 ">
 <div class="card" style="width: 18rem;">
-    <img class="Bag" src="b.png" alt="Bag">
+    <img class="card-img-top" src="b.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Juta</h5>
+      <h5 class="card-title">Bag-Shoe</h5>
       <p class="card-text"></p>
-      <a href="https://nowrinislamlk.github.io/shoes" class="btn btn-primary">See more</a>
+      <a href="#" class="btn btn-primary">See more</a>
     </div>
   </div>
 </div>
@@ -78,9 +76,9 @@
   <div class="card" style="width: 18rem;">
     <img class="card-img-top" src="g.jpg" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">wedding</h5>
+      <h5 class="card-title">Wedding Card</h5>
       <p class="card-text"></p>
-      <a href="https://nowrinislamlk.github.io/wedding/" class="btn btn-primary">See more</a>
+      <a href="" class="btn btn-primary">See more</a>
     </div>
   </div>
 </div>
@@ -93,7 +91,7 @@
     <div class="card-body">
       <h5 class="card-title">Marksheet</h5>
       <p class="card-text"></p>
-<a href="https://nowrinislamlk.github.io/marksheet/" class="btn btn-primary">See more</a>
+<a href="#" class="btn btn-primary">See more</a>
     </div>
   </div>
 </div>
@@ -103,9 +101,9 @@
   <div class="card" style="width: 18rem;">
     
     <div class="card-body">
-      <h5 class="card-title">Let Me</h5>
+      <h5 class="card-title">Letme</h5>
       <p class="card-text"></p>
-      <a href="https://nowrinislamlk.github.io/letme/" class="btn btn-primary">See more</a>
+      <a href="#" class="btn btn-primary">See more</a>
     </div>
   </div>
 
