--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ list-style:none;
       
       <div class="col-6 col-md-3 col-lg-3 col-xl-3"> 
         <label for="">Email:</label>
-        <a href="https://www.nowrinislam491@gmail.com"><h5 class="text-dark">nowrinislam491@gmail.com</h5></a>
+        <a href="https://www.nowrinislam491@gmail.com"><h5 class="text-dark">nowrinislam491 <br>@gmail.com</h5></br></h5></a>
       </div>
       <div class="col-6 col-md-3 col-lg-3 col-xl-3">
         <label for="">Date of birth:</label>
