--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
     <div class="card-body">
       <h5 class="card-title">Bag-Shoe</h5>
       <p class="card-text"></p>
-      <a href="#" class="btn btn-primary">See more</a>
+      <a href="https://nowrinislamlk.github.io/shoes/" class="btn btn-primary">See more</a>
     </div>
   </div>
 </div>
@@ -78,7 +78,7 @@
     <div class="card-body">
       <h5 class="card-title">Wedding Card</h5>
       <p class="card-text"></p>
-      <a href="" class="btn btn-primary">See more</a>
+      <a href="https://nowrinislamlk.github.io/wedding/" class="btn btn-primary">See more</a>
     </div>
   </div>
 </div>
@@ -91,7 +91,7 @@
     <div class="card-body">
       <h5 class="card-title">Marksheet</h5>
       <p class="card-text"></p>
-<a href="#" class="btn btn-primary">See more</a>
+<a href="https://nowrinislamlk.github.io/marksheet/" class="btn btn-primary">See more</a>
     </div>
   </div>
 </div>
