--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,9 @@
   <ul class="menu d-flex justify-content-end">
   <a href=""><li>Portfolio</li></a>
   
-
+  
+   
+   
   </ul>
   </nav>
   </div>
@@ -103,7 +105,7 @@
     <div class="card-body">
       <h5 class="card-title">Letme</h5>
       <p class="card-text"></p>
-      <a href="#" class="btn btn-primary">See more</a>
+      <a href="https://nowrinislamlk.github.io/letme/" class="btn btn-primary">See more</a>
     </div>
   </div>
 
